[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
yfinance = "^0.2.40"
blpapi = {version = "^3.24.4", source = "bloomberg"}
matplotlib = "^3.9.0"
mplfinance = "^0.12.10b0"
plotly = "^5.22.0"
nbformat = "^5.10.4"

[[tool.poetry.source]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple"
priority = "explicit"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"